--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="container-xxl">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-auto">
-						<p class="mb-0">Logo</p>
+						<p class="mb-0">SolidBunch</p>
 					</div>
 					<div class="col-auto">
 						<nav class="navbar navbar-expand-lg">
@@ -97,40 +97,11 @@
 					</div>
 				</div>
 			</section>
-			<section class="product pt-5">
+			<section class="product mt-5">
 				<h2 class="text-center pt-5 mb-4 h1">COMPANY DIVISIONS</h2>
-				<!-- <div class="bg-dark py-5">
-					<div class="row g-0">
-						<div class="col text-white">
-							<div class="card text-bg-success border-secondary bg-transparent mb-3 mx-auto"
-								style="max-width: 40rem;">
-								<div class="card-header bg-secondary border-secondary">STARTER KIT </div>
-								<div class="card-body">
-									<p class="card-text">WordPress starter theme with a modern development stack for launching
-										projects
-										faster and easily
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col text-white">
-							<div class="card text-bg-success border-primary bg-transparent mb-3 mx-auto"
-								style="max-width: 40rem;">
-								<div class="card-header  bg-primary border-primary">FOUNDATION STARTER KIT THEME
-								</div>
-								<div class="card-body">
-									<p class="card-text">WordPress environment boilerplate for fast and easy start projects with
-										docker
-										containers,
-										convenient credential settings, improved configuration</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div> -->
 				<div class="bg-dark">
 					<div class="row g-0">
-						<a href="#"
+						<a href="#sk"
 							class="product_section col text-white bg-dark bg-gradient d-flex flex-column text-center py-5 px-3 text-decoration-none">
 							<div class="m-auto" style="max-width: 400px;">
 								<i class="fa-solid fa-gear mb-5" style="font-size: 70px;"></i>
@@ -138,10 +109,11 @@
 								<p>WordPress starter theme with a modern development stack for launching
 									projects
 									faster and easily</p>
-								<span class="btn btn-outline-light">Read more</span>
+								<span class="btn btn-outline-light px-5 mt-5">Read more <i
+										class="fa-solid fa-angle-right"></i></span>
 							</div>
 						</a>
-						<a href="#"
+						<a href="#fn"
 							class="product_section col text-white bg-dark d-flex flex-column text-center py-5 px-3 text-decoration-none">
 							<div class="m-auto" style="max-width: 400px;">
 								<i class="fa-solid fa-gears mb-5" style="font-size: 70px;"></i>
@@ -150,15 +122,289 @@
 									docker
 									containers,
 									convenient credential settings, improved configuration</p>
-								<span class="btn btn-outline-light">Read more</span>
+								<span class="btn btn-outline-light px-5 mt-5">Read more <i
+										class="fa-solid fa-angle-right"></i></span>
 							</div>
 						</a>
 					</div>
 				</div>
 			</section>
+			<section class="sk mt-5" id="sk">
+				<h2 class="text-center pt-5 mb-4 h1">THEME FUNCTIONALITY</h2>
+				<div class="bg-dark bg-gradient text-white py-5">
+					<div class="container">
+						<div class="row">
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-chart-line" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Use Gutenberg blocks, FSE, and last
+											WordPress features to make
+											flexible and powerful projects</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-computer" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Use composer and webpack to
+											install dependencies and to
+											operate with assets</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-arrows-to-circle" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Follows PSR rules to make best
+											development and code
+											understanding</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-rocket" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Have modern file structure and
+											autoloader</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="fn mt-5" id="fn">
+				<h2 class="text-center pt-5 mb-4 h1">FOUNDATION FUNCTIONALITY</h2>
+				<div class="bg-dark text-white py-5">
+					<div class="container">
+						<div class="row">
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-chart-line" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Setup server environments,
+											hosting (poduction, staging,
+											develop, etc)</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-computer" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Install base project structure.</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-arrows-to-circle" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Install dependencies -
+											WordPress core, plugins,
+											Starter Kit Theme</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-rocket" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Run docker containers with
+											database, php, and nginx</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-rocket" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Setup CI/CD. Run build and
+											deployments</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 col-lg-6 py-5">
+								<div class="row align-items-center justify-content-center">
+									<div class="col-auto">
+										<i class="fa-solid fa-rocket" style="font-size: 60px;"></i>
+									</div>
+									<div class="col col-md-6">
+										<p class="mb-0">Run tests</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="mt-5 pb-5">
+				<div class="container">
+					<h2 class="text-center pt-5 mb-4 h1">OUR ADVANTAGES</h2>
+					<div class="row justify-content-center">
+						<div class="col-12 col-md-8">
+							<ol class="list-group list-group-flush">
+								<li class="list-group-item py-4">
+									<strong class="d-block fs-5">Facilitating Rapid Iteration:</strong>
+									Quick setup and tear-down of
+									environments (Docker), along with automated
+									deployments (CI/CD), allow teams to iterate rapidly.
+								</li>
+								<li class="list-group-item py-4"><strong class="d-block fs-5">Enhancing Collaboration:</strong>
+									These
+									tools
+									streamline
+									workflows,
+									making it easier for cross-functional teams to collaborate
+									effectively.</li>
+								<li class="list-group-item py-4 d-flex row">
+									<div class="col-auto">
+										<i class="fa-solid fa-chart-line" style="font-size: 60px;"></i>
+									</div>
+									<span class="col">
+										<strong class="d-block fs-5">Improving Feedback Loops:</strong>
+										Automated
+										testing and
+										continuous integration provide immediate feedback on
+										changes, crucial for Agile's iterative approach.
+									</span>
+								</li>
+								<li class="list-group-item py-4 d-flex row">
+
+									<span class="col">
+										<strong class="d-block fs-5">Improving Feedback Loops:</strong>
+										Automated
+										testing and
+										continuous integration provide immediate feedback on
+										changes, crucial for Agile's iterative approach.
+									</span>
+									<div class="col-auto">
+										<i class="fa-solid fa-arrows-to-circle" style="font-size: 60px;"></i>
+									</div>
+								</li>
+								<li class="list-group-item py-4 d-flex row">
+									<div class="col-auto">
+										<i class="fa-solid fa-rocket" style="font-size: 60px;"></i>
+									</div>
+									<span class="col">
+										<strong class="d-block fs-5">Improving Feedback Loops:</strong>
+										Automated
+										testing and
+										continuous integration provide immediate feedback on
+										changes, crucial for Agile's iterative approach.
+									</span>
+								</li>
+								<li class="list-group-item py-4"><strong class="d-block fs-5">Reducing Risk:</strong> Automated
+									tests
+									and
+									standardized coding
+									practices (PSRs) reduce the risk of defects, aligning with
+									Agile’s focus on high-quality deliverables.</li>
+								<li class="list-group-item py-4"><strong class="d-block fs-5">Reducing Downtime and
+										Errors:</strong>
+									Automated
+									testing
+									and deployment ensure higher quality, reducing
+									costly errors and downtime.</li>
+								<li class="list-group-item py-4"><strong class="d-block fs-5">Enhancing Efficiency:</strong>
+									Tools
+									like
+									Docker
+									and CI/CD
+									streamline workflows, reducing the time needed for
+									setup and deployment.</li>
+								<li class="list-group-item py-4"><strong class="d-block fs-5">Improving Resource
+										Management:</strong>
+									Cloud
+									integration and microservices architecture allow for
+									more efficient use of resources.</li>
+								<li class="list-group-item py-4"><strong class="d-block fs-5">Facilitating Scalability:</strong>
+									Automation
+									tools like
+									Terraform enable scalable infrastructure, saving
+									costs on unnecessary resources.</li>
+								<li class="list-group-item py-4"><strong class="d-block fs-5">Reducing Costs:</strong> Automated
+									testing
+									and
+									deployment minimize human error, reducing the
+									costs associated with fixing bugs, decrease the
+									time to market, reducing labor costs. Allow for
+									better resource utilization</li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="mt-5 py-5 bg-dark text-white">
+				<div class="container text-center">
+					<!-- <i class="fa-solid fa-check" style="font-size: 80px;"></i> -->
+					<i class="fa-solid fa-clipboard-check" style="font-size: 80px;"></i>
+					<!-- <i class="fa-solid fa-handshake  text-light" style="font-size: 80px;"></i> -->
+					<h2 class="pt-5 mb-4 h1">DON’T DOUBT, CHOOSE US!</h2>
+					<p class="fs-3 fw-light lh-lg">We've harnessed the most advanced
+						technologies and tools to streamline the
+						launch and support of your project,
+						allowing you to focus on its unique features
+						and business processes. With the technical
+						complexities and tool selection already
+						taken care of, your energy can be directed
+						towards innovation and growth. Whether
+						you're an entrepreneur, startup, or
+						developer, join us in creating something
+						new and exciting!</p>
+				</div>
+			</section>
+			<section class="mt-5 py-5 text-center">
+				<div class="container">
+					<i class="fa-solid fa-globe" style="font-size: 80px;"></i>
+					<h2 class="pt-5 mb-4 h1">10 YEARS EXPERIENCE</h2>
+					<p class="fs-3 fw-light lh-lg">We create outstanding high speed web
+						applications with perfect architecture and
+						excellent scalability. Are you looking for
+						professional IT team?</p>
+				</div>
+			</section>
 		</main>
-		<footer class="bg-dark text-white">
-			copy
+		<footer class="bg-dark text-white py-4">
+			<div class="container  d-flex justify-content-between align-items-center">
+				<span>SolidBunch</span>
+				<ul class="list-unstyled m-0 d-flex gap-4 align-items-center">
+					<li>
+						<a class="text-white fs-6" href="mailto:contact@solidbunch.com">contact@solidbunch.com</a>
+					</li>
+					<li>
+						<a class="text-white fs-3" href="https://github.com/solidbunch" target="_blank"><i
+								class="fa-brands fa-github"></i></a>
+					</li>
+					<li>
+						<a class="text-white fs-3" href="https://www.linkedin.com/company/solidbunch/" target="_blank"><i
+								class="fa-brands fa-linkedin"></i></a>
+					</li>
+
+				</ul>
+			</div>
 		</footer>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
