--- a/index.html
+++ b/index.html
@@ -386,6 +386,14 @@
 						professional IT team?</p>
 				</div>
 			</section>
+			<div class="bg-warning  py-5 px-2 text-center">
+				<img sizes="(max-width: 986px) 100vw,
+				620px" srcset="http://via.placeholder.com/320x320 320w,
+				http://via.placeholder.com/640x640 640w,
+				http://via.placeholder.com/1000x1000 1000w,
+				http://via.placeholder.com/1200x1200 1200w,
+					 http://via.placeholder.com/1500x1500 1500w" src="http://via.placeholder.com/320x320" alt="IMG" class="img-fluid">
+			</div>
 		</main>
 		<footer class="bg-dark text-white py-4">
 			<div class="container  d-flex justify-content-between align-items-center">
@@ -407,6 +415,7 @@
 			</div>
 		</footer>
 	</div>
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
 		integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
 		crossorigin="anonymous"></script>
